[package]
categories = ["api-bindings", "development-tools"]
keywords = ["mesa", "git", "api", "sdk"]
repository = "https://github.com/mesa-dot-dev/rust-sdk"
readme = "README.md"
name = "mesa_dev_oapi"
version = "1.9.0"
authors = ["Marko Vejnovic <marko@mesa.dev>"]
description = "Mesa's OpenAPI-generated Rust SDK."
# Override this license by providing a License Object in the OpenAPI.
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
serde_path_to_error = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
