[package]
name = "mesa-dev"
version = "1.0.0"
edition = "2021"
description = "Rust SDK for the mesa.dev API"
license = "MIT"
repository = "https://github.com/mesa-dot-dev/sdk-rust"
keywords = ["mesa", "git", "api", "sdk"]
categories = ["api-bindings", "development-tools"]

[dependencies]
mesa_dev_oapi = { path = "../mesa-dev-oapi" }

[dev-dependencies]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
