[package]
name = "mesa-dev"
version = "1.8.0"
edition = "2021"
description = "Rust SDK for the mesa.dev API"
license = "MIT"
repository = "https://github.com/mesa-dot-dev/sdk-rust"
keywords = ["mesa", "git", "api", "sdk"]
categories = ["api-bindings", "development-tools"]
readme = "README.md"

[dependencies]
mesa_dev_oapi = { version = "1.6.1", path = "../mesa-dev-oapi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
async-stream = "0.3"
futures-core = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
test-context = "0.3"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
